First pass at the completed assignment

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -59,14 +59,17 @@ summary(dailySteps$totalSteps)
 Now, we will plot this daily steps on a histogram to see discover the frequency of number of steps taken over the 61 day period.
 
 ```{r dailyStepsHistogram, fig.height=6}
-printHistogram <- function() {
+printHistogram <- function(dailySteps, plotTitle) {
         par(mar = c(5, 4, 1, 1))
         with (
                 dailySteps, 
-                hist(totalSteps, main = "Histogram of total number of steps taken each day", breaks = 15, xlab = "Steps per day")
+                hist(totalSteps, 
+                     main = plotTitle, 
+                     breaks = 15, 
+                     xlab = "Steps per day")
         )
 }
-printHistogram()
+printHistogram(dailySteps, "Histogram of total number of steps taken each day")
 ```
 
 Let us also look at the daily steps over the 61 day period with the help of a bar plot.
@@ -83,12 +86,195 @@ printBarPlot <- function() {
 printBarPlot()
 ```
 
+Finally, let us take a look at the mean and median of total steps per day
+
+```{r}
+meanStepsPerDay <- mean(dailySteps$totalSteps)
+medianStepsPerDay <- median(dailySteps$totalSteps)
+print(paste("Mean Steps per day:", meanStepsPerDay, sep = " "))
+print(paste("Median Steps per day:", medianStepsPerDay, sep = " "))
+```
+
 ## What is the average daily activity pattern?
+
+Let us now look at how the person's activity varied over the different 288 (24 hours * 12 obesrvaions per hour) 5 minute intervals recorded.
+
+```{r AverageStepsPerInterval, fig.width=12}
+library(dplyr, quietly = TRUE)
+summaryByInterval <- activityData %>%
+        group_by(interval) %>%
+        summarize(steps = mean(steps, na.rm = TRUE))
+with (
+        summaryByInterval,
+        plot(x=interval, y = steps, type = "l",
+             xlab = "5 Minute Intervals",
+             ylab = "Steps",
+             main = "Average Steps taken every 5 minute interval throughout the day",
+             col = "blue"
+             ),
+)
+```
+
+So, it does look like that the person is the most active right around 9:00 in the morning. As expected, he is not taking many steps before 5:00 in the morning (no sleep-walker here!!), and also not much after 8:00PM. He steps are reasonably well spread throughout the day except for the peak period in the morning. May be he goes for a run???
+
+Let us evaluate which 5 minute interval he has recorded the most steps on an average.
+
+```{r IntervalWithMaxSteps}
+summaryByInterval[summaryByInterval$steps == max(summaryByInterval$steps),]
+```
 
 
 
 ## Imputing missing values
 
+We see a lot of NA values in the steps observation. Let us see how many.
+
+```{r}
+library(dplyr, quietly = TRUE)
+noStepsRecorded <- activityData[is.na(activityData$steps),]
+numberOfNAObservations <- dim(noStepsRecorded)[1]
+percentageOfNAObservations <- 100.0 * numberOfNAObservations / dim(activityData)[1]
+print(c(numberOfNAObservations, percentageOfNAObservations))
+```
+
+So, we have a total of `r numberOfNAObservations` missing observations, which amounts to `r percentageOfNAObservations` percent of the entire data set.
+
+Now let us see the daily distribution of missing observations.
+
+```{r}
+library(dplyr, quietly = TRUE)
+NAByDay <- noStepsRecorded %>%
+        group_by(date) %>%
+        summarize(cnt = length(steps)) %>%
+        mutate(wkday = weekdays(date)) %>%
+        select(date, wkday, cnt)
+NAByDay
+```
+
+
+It is clear, that we have `r dim(NAByDay)[1]` days for which we have all 288 observations missing. He was definitely not using the smartphone device on those days.
+
+We will use the following strategy for filling out the missing values in a realistic way.
+
+1. Create a dataset from activityData that do not have any missing values
+2. Add a column weekday (Sunday - Saturday) to the dataset
+3. Now summarize the data to compute the mean ane median steps for each weekday and each time interval
+4. Fill out the missing values by using this dataset as a reference dataset. So, if we are missing the value for 2012-10-01 (Monday) for time interval 500, then we will populate the corresponding value (Monday and Interval 500) from our reference dataset derived in step 3. In our case we choose the mean over the median.
+
+```{r PopulateImputedData}
+library(dplyr, quietly = TRUE)
+imputeMissingData <- function(activityData) {
+        # Add weekday to activitydata
+        activityData <- activityData %>%
+                mutate(wkday = weekdays(date)) %>%
+                select(date, wkday, interval, steps)
+        
+        # Now get mean and median of steps for each interval per weekday
+        avgStepsByWeekday <- activityData %>%
+                filter(!(date %in% NAByDay$date)) %>%
+                group_by(wkday, interval) %>%
+                summarise(meanSteps = round(mean(steps)), medianSteps = round(median(steps) * 1.0))
+        
+        # Create the imputed data for all missing data
+        derivedSteps <- activityData %>%
+                filter(date %in% NAByDay$date) %>%
+                inner_join(avgStepsByWeekday, by=c("wkday", "interval")) %>%
+                mutate(steps = meanSteps) %>%
+                select(date, wkday, interval, steps)
+        
+        # Create a subset of the original data with no missing values
+        origSteps <- activityData %>%
+                filter(!(date %in% NAByDay$date))
+        
+        # Combine the two data frames to create the final imputed data frame
+        activityDataImputed <- rbind(origSteps, derivedSteps)
+        
+        # Order by date, interval
+        activityDataImputed <- arrange(activityDataImputed, date, interval)
+        
+        activityDataImputed
+}
+activityDataImputed <- imputeMissingData(activityData)
+activityDataImputed
+```
+
+Now, let us re-create the daily steps dataset with the imputed data.
+
+```{r DailyStepsImputed}
+library(dplyr, quietly = TRUE)
+dailyStepsImputed <- activityDataImputed %>%
+        group_by(date) %>%
+        summarize(totalSteps = sum(steps))
+```
+
+And, plot the histogram of daily total steps. For comparison, we plot the original histogram too.
+
+```{r dailyStepsHistogramImputed, fig.height=8}
+par(mfrow=c(2,1))
+printHistogram(dailySteps, "Histogram of total number of steps each day")
+printHistogram(dailyStepsImputed, "Histogram of total number of steps each day (NA Imputed)")
+```
+
+The histogram from the imputed data looks closer to a normal distribution. Let us look at the mean ane median as well.
+
+```{r showDifferences}
+summaries <- data.frame(
+        c(mean(dailySteps$totalSteps, na.rm = TRUE), 
+          mean(dailyStepsImputed$totalSteps, na.rm = TRUE)
+        ),
+        c(median(dailySteps$totalSteps, na.rm = TRUE), 
+          median(dailyStepsImputed$totalSteps, na.rm = TRUE)
+        ),
+        row.names = c("Original", "NA Imputed"))
+colnames(summaries) <- c("Mean", "Median")
+summaries
+```
+
+Both the mean and the median of the imputed data are somewhat higher than the original values, implying the weekdays for which data was missing are probably days when the individual walks more on an average. Remember, our imputation was derived basd on the week day.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+Create a data frame for translating Week Days to "weekday" and "weekend". Then add this translation to our imputed data.
+
+
+```{r}
+library(dplyr, quietly = TRUE)
+translateWeekDay <- data.frame(c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"),
+                               c(rep("weekday", 5), rep("weekend", 2)),
+                               row.names = NULL,
+                               stringsAsFactors = FALSE)
+colnames(translateWeekDay) <- c("wkday", "daytype")
+activityDataImputed <- activityDataImputed %>%
+        inner_join(translateWeekDay, by = c("wkday")) %>%
+        select(date, daytype, wkday, interval, steps)
+activityDataImputed$daytype = factor(activityDataImputed$daytype, levels=c("weekday", "weekend"))
+activityDataImputed
+```
+
+Now we will compute average number of steps taken over weekday/weekend and time interval.
+
+```{r}
+library(dplyr, quietly = TRUE)
+avgByDaytype <- activityDataImputed %>%
+        group_by(daytype, interval) %>%
+        summarize(steps = mean(steps))
+avgByDaytype
+```
+
+And we will plot a line plot showing this data with interval plotted along the x axis and the average steps on the y axis. The two lines corresponding to weekday and weekend will be in two different plots.
+
+```{r PanelPlotWeekday, fig.width = 12, fig.height=12}
+library(lattice)
+xyplot(
+        steps ~ interval | daytype, 
+        data = avgByDaytype, 
+        layout = c(1,2), 
+        type = "l", 
+        xlab = "Interval",
+        ylab = "Number of steps")
+```
+
+So, it looks like that there is a big spike of activity at around 8:30AM on weekdays, whereas, the activity is more evenly distributed throughout the day on weekends.
+
+
